Revert "#18887 Fixed backend notifications counter round icon small cut from right side issue"
This reverts commit 2b6cf6e387361b85fd483f6ed479fc866e380136.

--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/header/actions-group/_notifications.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/header/actions-group/_notifications.less
@@ -103,7 +103,6 @@
         padding: .3em .5em;
         position: absolute;
         top: 50%;
-        width: 18px;
     }
 }
 
